# Rustine

./: LICENSE  README.md  run_stat.sh
artifacts/mimalloc/analyze/: info.json
artifacts/mimalloc/manual_debug/: Cargo.toml  translation.json
artifacts/mimalloc/preprocess/: alloc-aligned.c  alloc-aligned_includes.txt  alloc-posix.c  alloc-posix_includes.txt  alloc.c  alloc_includes.txt  arena-meta.c  arena-meta_includes.txt  arena.c  arena_includes.txt  bitmap.c  heap.c  heap_includes.txt  init.c  init_includes.txt  libc.c  options.c  options_includes.txt  os.c  page-map.c  page-map_includes.txt  page.c  page_includes.txt  prim.c  prim_includes.txt  random.c  static.c  static_includes.txt  stats.c  test-api-fill.c  test-api-fill_includes.txt  test-api.c  test-stress.c  (+2 more)
legacy/Tools/: analyze.py  c_analysis.py  c_cfg.py  decompose.py  decompose_c.py  decompose_rust.py  divide_blocks.py  error_parser.py  fix_unsafe_gemini.py  readability_c.py  readability_python.py  readability_rust.py  rust_analysis.py  safety_check.py  skeleton.py  transpile.py  utils.py
scripts/: algorithm.py  algorithm_v2.py  count_assert.sh  count_c_macros.py  count_c_project_line.sh  count_rust_project_line.sh  formatter.sh  instrument_rust.py  parser.py  platform-specific.diff  run_commands.sh  rust_code_quality.sh  suspicousness-calculation.py
scripts/newmetrics/: Cargo.toml  rust-toolchain.toml
scripts/newmetrics/src/: lib.rs  par.rs  pointer_counter.rs  unsafe_counter.rs  utils.rs
scripts/trace_inserter/: Cargo.toml
scripts/trace_macro/: Cargo.toml
scripts/trace_utils/: Cargo.toml
(+156 files in other folders)
