[package]
name = "newmetrics"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
rustc_version = "0.2.3"
wait-timeout = "0.2"
which = "<=4.0"

[[bin]]
name = "newmetrics"

[[bin]]
name = "cargo-newmetrics"
